# oglycan-optimizer

./: .gitignore  LIMITATIONS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: SCIENCE.md
examples/: default_acquisition_params.json  example_etanercept.py
examples/method_presets/: fast_throughput.json  high_resolution.json  minimal_enzyme.json
sites/: atacicept.json  ctla4_ig.json  epo.json  etanercept.json  iga1_hinge.json  schema.md
src/oglycan/: __init__.py  __main__.py  cli.py  core.py  glycan.py  method_card.py  pilot.py  predict.py  recalibrate.py  recommend.py  report.py  runtime_cost.py  sensitivity.py  site_scoring.py  uncertainty.py
src/oglycan/models/: __init__.py  _math.py  etd_efficiency.py  hcd_fragments.py  lc_separation.py  ms_acquisition.py  operator_bonus.py  search_quality.py
src/oglycan/web/: __init__.py  app.py
tests/: test_catalog_benchmarks.py  test_cli_smoke.py  test_composition.py  test_diff_catalog.py  test_etd_efficiency.py  test_glycan.py  test_hcd_fragments.py  test_lc_separation.py  test_method_card.py  test_method_presets.py  test_ms_acquisition.py  test_operator_bonus.py  test_pilot.py  test_predict.py  test_recalibrate.py  test_recommend.py  test_report.py  test_runtime_cost.py  test_search_quality.py  test_sensitivity.py  test_site_scoring_monotonicity.py  test_uncertainty.py  test_web_app_imports.py
