[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oglycan-optimizer"
version = "0.4.0"
description = "Physics-informed acquisition parameter optimizer for O-glycopeptide EThcD mass spectrometry. Pure Python stdlib, zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Di Wu"}]
keywords = ["mass-spectrometry", "glycoproteomics", "O-glycan", "EThcD", "acquisition", "DOE", "method-development"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Chemistry",
]
# NOTE: MVP uses Python stdlib only. No runtime dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
web = ["streamlit>=1.30"]

[tool.setuptools.packages.find]
where = ["src"]
